part1/exercise1.07/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: logoutput
spec:
    selector:
        app: logoutput
    ports:
        - protocol: TCP
          port: 80
          targetPort: 3000
    type: ClusterIP
